--- a/src/components/ResponsiveNavigation/ResponsiveNavigation.module.css
+++ b/src/components/ResponsiveNavigation/ResponsiveNavigation.module.css
@@ -26,9 +26,10 @@
   background-color: black;
   padding: 10px 20px;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0%;
+  left: 0%;
+  transform: translate(-100%, -100%);
+  transition: transform 900ms ease; 
 }
 
 .dropdown-navigation ul li {
@@ -49,8 +50,8 @@
   left: 0;
   top: 0;
   visibility: visible;
-  transform: translateY(0);
-  transition: 900ms ease;
+  transform: translate(0, 0);
+  transition: 500ms ease;
   z-index: 200;
   background-color: black;
 }
