--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -81,12 +81,32 @@
         gap: 60px;
         margin-top: 40px;
     }
+    .model-open-img {
+        max-width: 300px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 3.3%;
+        right: 36%;
+        gap: 50%;
+    }
 }
 
 @media screen and (max-width: 600px) and (min-width: 481px) {
     .galleryPage{
         gap: 60px;
         margin-top: 40px;
+    }
+    .model-open-img {
+        max-width: 360px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 3.3%;
+        right: 21%;
+        gap: 50%;
     }
 }
 
@@ -95,12 +115,32 @@
         gap: 60px;
         margin-top: 40px;
     }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 13%;
+        gap: 50%;
+    }
 }
 
 @media screen and (max-width: 900px) and (min-width: 769px) {
     .galleryPage{
         gap: 60px;
         margin-top: 40px;
+    }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 11%;
+        gap: 50%;
     }
 }
 
@@ -109,12 +149,32 @@
         gap: 60px;
         margin-top: 40px;
     }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 9%;
+        gap: 50%;
+    }
 }
 
 @media screen and (max-width: 1200px) and (min-width: 1025px) {
     .galleryPage{
         gap: 60px;
         margin-top: 40px;
+    }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 8%;
+        gap: 50%;
     }
 }
 
@@ -123,6 +183,16 @@
         gap: 60px;
         margin-top: 40px;
     }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 7%;
+        gap: 50%;
+    }
 }
 
 @media screen and (max-width: 1600px) and (min-width: 1441px) {
@@ -130,12 +200,32 @@
         gap: 60px;
         margin-top: 40px;
     }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 6%;
+        gap: 50%;
+    }
 }
 
 @media screen and (max-width: 1920px) and (min-width: 1601px) {
     .galleryPage{
         gap: 60px;
         margin-top: 40px;
+    }
+    .model-open-img {
+        max-width: 400px;
+        max-height: 800px;
+        border-radius: 2%;
+    }
+    .model-open-actions{
+        top: 2.3%;
+        right: 5%;
+        gap: 50%;
     }
 }
 
